--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="PT-br">     
   <head>
     <meta charset="UTF-8" />
+    <link rel="shortcut icon" type="image/x-icon" href="./src/imagens/Icone-portifolio.png">
     <link rel="icon" type="image/svg+xml" href="" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
